Address CodeRabbit review feedback for P2P NIXL transfers
- Add timeout=30 to all gRPC stub calls in MxClient to prevent
  indefinite hangs when the server is unresponsive
- Simplify Dockerfile.client: remove proto generation, grpcio-tools,
  and leftover redis dep; use dynamic python site-packages path
- Bump grpcio floor to >=1.66.2 to match checked-in generated stubs
- Fix static f-string and prefix unused variable in vllm_loader.py
- Add allowPrivilegeEscalation: false to model-download and
  modelexpress-server containers
- Add K8s 1.29 requirement comment for native sidecar support
- Add comments explaining root requirement for vLLM RDMA containers
- Improve docstring for global mutable state in vllm_loader.py
- Add language identifiers to bare code fences in CLAUDE.md

Signed-off-by: Hyunjae Woo <hwoo@nvidia.com>

--- a/examples/p2p_transfer_k8s/model-download.yaml
+++ b/examples/p2p_transfer_k8s/model-download.yaml
@@ -39,6 +39,8 @@ spec:
       containers:
         - name: downloader
           image: python:3.11-slim
+          securityContext:
+            allowPrivilegeEscalation: false
           env:
             - name: HF_HUB_CACHE
               value: /models
