--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -17,6 +17,7 @@ spec:
       labels:
         app: model-express-server
     spec:
+      automountServiceAccountToken: false
       imagePullSecrets:
         - name: ngc-secret
       containers:
@@ -40,9 +41,11 @@ spec:
             limits:
               cpu: "500m"
               memory: "256Mi"
+              ephemeral-storage: "1Gi"
             requests:
               cpu: "200m"
               memory: "128Mi"
+              ephemeral-storage: "256Mi"
           volumeMounts:
             - name: model-cache
               mountPath: /root
