fix: address nicolasnoble review feedback
- Default metadata backend redis -> grpc in metadata_client.py
- Remove non-existent stability_verified field
- Fix wait_for_ready to return (False, None, None) when unavailable
- Fix Python sanitize_model_name to match Rust ([^a-z0-9\-.])
- Replace _log() with logger in vllm_loader.py
- Re-raise swallowed exception in _publish_metadata_to_server
- CRD: handle 409 conflict, use resourceVersion + retry loop
- CRD: add ownerReferences on ConfigMaps
- CRD: parse errors instead of unwrap_or(0)
- CRD: expected_workers from env or current count
- Double-checked locking for backend init in state.rs
- YAML: fix namespace, remove env-specific storageClassName

Signed-off-by: Kavin Krishnan <kavinkrishnan@gmail.com>

--- a/examples/p2p_transfer_k8s/deploy/persistence/rbac-modelmetadata.yaml
+++ b/examples/p2p_transfer_k8s/deploy/persistence/rbac-modelmetadata.yaml
@@ -8,7 +8,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: modelexpress
-  namespace: kavin
+  namespace: default  # Change to your target namespace
   labels:
     app.kubernetes.io/name: modelexpress
 ---
@@ -16,7 +16,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: modelexpress-metadata
-  namespace: kavin
+  namespace: default  # Change to your target namespace
   labels:
     app.kubernetes.io/name: modelexpress
 rules:
@@ -42,7 +42,10 @@ rules:
       - get
       - update
       - patch
-  # ConfigMaps for tensor descriptors
+  # ConfigMaps for tensor descriptors.
+  # NOTE: This grants access to ALL ConfigMaps in the namespace. K8s RBAC does not
+  # support label-based resource filtering. In shared namespaces, consider using a
+  # dedicated namespace for ModelExpress workloads.
   - apiGroups:
       - ""
     resources:
@@ -60,7 +63,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: modelexpress-metadata
-  namespace: kavin
+  namespace: default  # Change to your target namespace
   labels:
     app.kubernetes.io/name: modelexpress
 roleRef:
@@ -70,7 +73,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: modelexpress
-    namespace: kavin
+    namespace: default  # Change to your target namespace
 ---
 # ClusterRole for CRD management (cluster-admin typically handles this)
 # Only needed if server creates/manages the CRD itself
