--- a/examples/p2p_transfer_k8s/deploy/persistence/redis-standalone.yaml
+++ b/examples/p2p_transfer_k8s/deploy/persistence/redis-standalone.yaml
@@ -12,7 +12,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: csi-mounted-fs-path-sc
+  # storageClassName: default  # Uncomment and set for your cluster if needed
   resources:
     requests:
       storage: 1Gi
