fix: avoid sudo for kind install and fix Redis hang in k8s test
The kind binary doesn't need to be in /usr/local/bin - install to
~/.local/bin instead to avoid requiring sudo.

Set REDIS_URL to an immediately-refused address in the local storage
test values so the server doesn't hang trying to connect to a
non-existent Redis, which was preventing the gRPC port from opening
and causing health probe failures.

Signed-off-by: Nicolas 'Pixel' Noble <nicolas@nobis-crew.org>

--- a/helm/values-local-storage.yaml
+++ b/helm/values-local-storage.yaml
@@ -67,6 +67,8 @@ env:
   MODEL_EXPRESS_CACHE_DIRECTORY: "/root"
   # Note: HOME is set to /root so HuggingFace cache uses /root/.cache/huggingface
   HOME: "/root"
+  # Disable Redis - use a port that will get immediate connection refused
+  REDIS_URL: "redis://127.0.0.1:1"
 
 livenessProbe:
   enabled: true
