fix: set UCX_LOG_LEVEL to INFO in all deploy YAMLs
Signed-off-by: Kavin Krishnan <kavinkrishnan@gmail.com>

--- a/examples/p2p_transfer_k8s/deploy/vllm-source.yaml
+++ b/examples/p2p_transfer_k8s/deploy/vllm-source.yaml
@@ -84,7 +84,7 @@ spec:
             - name: NIXL_LOG_LEVEL
               value: "INFO"
             - name: UCX_LOG_LEVEL
-              value: "WARN"
+              value: "INFO"
             # UCX transport settings for GPUDirect RDMA
             - name: UCX_TLS
               value: "rc_x,rc,dc_x,dc,cuda_copy"
