--- a/examples/p2p_transfer_k8s/deploy/vllm-source.yaml
+++ b/examples/p2p_transfer_k8s/deploy/vllm-source.yaml
@@ -113,28 +113,17 @@ spec:
           args:
             - |
               set -ex
-              # Background task: wait for health, warmup, then publish NIXL ready signal
+              # Background task: warmup inference to pre-warm CUDA graphs.
+              # Ready signal is published by the source loader internally
+              # (vllm_loader.py line 355) immediately after metadata — no need to wait for warmup.
               (
                 sleep 5
                 while ! curl -sf http://127.0.0.1:8000/health; do sleep 5; done
                 sleep 30
-                # Warmup inference
+                # Warmup inference (pre-warms CUDA graphs, not required for P2P transfer)
                 curl -sf -X POST http://127.0.0.1:8000/v1/completions \
                   -H 'Content-Type: application/json' \
                   -d '{"model":"'"$MODEL_NAME"'","prompt":"1+1=","max_tokens":3}' || true
-                # Publish ready signal via gRPC to MX server
-                python3 -c '
-              from modelexpress.client import MxClient
-              import os, uuid
-              server = os.environ.get("MX_SERVER_ADDRESS", "modelexpress-server:8001")
-              client = MxClient(server)
-              model = os.environ.get("MODEL_NAME", "unknown")
-              session_id = str(uuid.uuid4())
-              workers = int(os.environ.get("MX_EXPECTED_WORKERS", "8"))
-              for w in range(workers):
-                  client.publish_ready(model_name=model, worker_id=w, session_id=session_id, metadata_hash="")
-                  print(f"Published ready for worker {w}")
-              '
               ) &
               exec python3 -m vllm.entrypoints.openai.api_server \
                 --model $MODEL_NAME \
