--- a/examples/p2p_transfer_k8s/Dockerfile.client
+++ b/examples/p2p_transfer_k8s/Dockerfile.client
@@ -9,22 +9,11 @@ RUN pip install grpcio grpcio-tools protobuf redis
 # Copy ModelExpress proto files
 COPY modelexpress_common/proto /opt/modelexpress/proto
 
-# Copy ModelExpress Python client
+# Copy ModelExpress Python client (includes pre-generated proto files)
 COPY modelexpress_client/python/modelexpress /opt/modelexpress/client/modelexpress
-COPY modelexpress_client/python/generate_proto.sh /opt/modelexpress/client/
 COPY modelexpress_client/python/pyproject.toml /opt/modelexpress/client/
 
-# Generate Python proto files
 WORKDIR /opt/modelexpress/client
-RUN chmod +x generate_proto.sh && \
-    PROTO_DIR=/opt/modelexpress/proto && \
-    OUT_DIR=/opt/modelexpress/client/modelexpress && \
-    python3 -m grpc_tools.protoc \
-        -I"$PROTO_DIR" \
-        --python_out="$OUT_DIR" \
-        --grpc_python_out="$OUT_DIR" \
-        "$PROTO_DIR/p2p.proto" && \
-    sed -i 's/^import p2p_pb2/from . import p2p_pb2/' "$OUT_DIR/p2p_pb2_grpc.py"
 
 # Install the ModelExpress client package
 # NOTE: Use regular install (not -e) to avoid editable install precedence issues
